# ChangeLog for media-radio/ax25-tools
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  31 Jul 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  ax25-tools-0.0.8_p20080711.ebuild:
  Whitespace

  27 Jul 2008; Thomas Anderson <gentoofan23@gentoo.org>
  ax25-tools-0.0.8_p20080711.ebuild:
  Remove unnecessary quoting on assignment

  25 Jul 2008; Thomas Beierlein (TomJBE) <tb@forth-ev.de>
  ax25-tools-0.0.8_p20080711.ebuild:
  fix trailing whitespace

  25 Jul 2008; Thomas Beierlein (TomJBE) <tb@forth-ev.de> +files/ax25d.rc,
  +ax25-tools-0.0.8_p20080711.ebuild, +files/mheardd.rc, +files/netromd.rc,
  +files/rip98d.rc, +files/ax25-tools-9999-axgetput.diff, +files/rxecho.rc,
  +files/ttylinkd.rc, +metadata.xml:
  Ebuild for bug 232927 based on old ebuild for ax25-tools-0.0.8-r1 from CVS
  attic. Thanks to Tommy[D] and chithead for help.
