@@ -7,5 +7,5 @@ AUX rxecho.rc 524 RMD160 7986bac3e81b410e4081f671e5320bd8abd15871 SHA1 4819b3a06
 AUX ttylinkd.rc 534 RMD160 c113e56e6bc950585773151acb22a59a98b5125e SHA1 eb55331f85283456b433c8a4468e8880c5bddb1d SHA256 08d1a4dc4e7c3018f941442be695149a0f7e7958dcc8dcab56489c90ad0e0d78
 DIST ax25-tools-0.0.8_p20080711.tar.gz 518873 RMD160 3e00610ca52db53f3c7e883b35749d9e2f0b1085 SHA1 1700323c281ede4ecb079c1e88ccb2149ae53076 SHA256 0ced88619700212c7ebc317d863592b1c67ae3a1ebf25d9df387af725053fa76
 EBUILD ax25-tools-0.0.8_p20080711.ebuild 1277 RMD160 f831b59a370584f64faf4c454d85fcce9535786f SHA1 b00e6fca216147c4510d7563d737eb10c352acbe SHA256 684d40d21fd820b1d9146ce13597a8fb28f1b9345613847a177a3da9b97ed021
-MISC ChangeLog 882 RMD160 bca792aec47d33835c80694320bf585631fffbf1 SHA1 09b5ced64742e58f93fc7d87d9848d209fb8ab9f SHA256 f41e744ec37aead3b5ef9651dddc462e5b9171787fc2ecda882e4c35dc03a48e
-MISC metadata.xml 231 RMD160 c13056229989c3d4f448a7c7abcff3f4ee7ce13c SHA1 2d63dfb700b223f8f37c078692a81b2237896bce SHA256 4595c2615fd7c9095517949b1a920d4457f92801eb9d46307b18aafe58ec2a8a
+MISC ChangeLog 1015 RMD160 8ee93ec7c2e51433b0d039bee43107ac3807f48c SHA1 dedbd6693b710feb7a9fd18db63e3b1778399c54 SHA256 55dffebd68a66d4bc6d27a68819e5e2e2816e3bfd69b297c5c6a2656b8493a37
+MISC metadata.xml 251 RMD160 5879c46778ea42fc63f4e5d65ca0403fd9a756de SHA1 e60b1331f08a4f48ecf470fbaa5a10915a9eb403 SHA256 114f5e7064690d7fcdf8bd29232600e59ff29ecef3e95e986589dd26e158e993
