@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>no-herd</herd>
-<maintainer>
-<email>maintainer-needed@gentoo.org</email>
-</maintainer>
+	<herd>maintainer-wanted</herd>
+	<use>
+		<flag name='X'>Enable some x based configuration tools.</flag>
+	</use>
 </pkgmetadata>
